# Walls

./: .gitignore  DEBUG_USAGE_GUIDE.md  KOKORO_INSTALLATION.md  MCP_INTEGRATION_DOCUMENTATION.md  README.md  config.py  data_loader.py  debug_mcp.py  embedding_llm_setup.py  forest_extracted.txt  install_kokoro.bat  install_kokoro.py  install_kokoro.sh  magical_forest_story.txt  main.py  rag_pipeline.py  requirements.txt  run_with_venv.sh  start_all.py  test_mcp_integration.py  test_rag_mcp.py  test_tool_executor.py  vector_store_manager.py
MCP/: README.md  README_BRIDGE.md  app_launcher.py  start_all_servers.sh  test_auto_launch.py  test_bridge.py  test_mcp_servers.py
Words/word_editor/rust_core/: Cargo.toml
Words/word_editor/rust_core/src/: lib.rs
ai_interface/: LICENSE  README.md  __init__.py  main.py
browser/: README.md  __init__.py  cli.py  main.py  shared_server_integration.py  start_headless.py
data/: document1.txt
gui_core/: README.md  __init__.py  adaptive_theme_manager.py  apply_theme.py  demo.py  system_theme_detector.py  test_adaptive_theme.py  theme copy.qss.bkp  theme.qss  theme_dark.qss  theme_light.qss
ollama-mcp-bridge/: mcp-config.json  pyproject.toml
radio_player/: CLI_USAGE.md  __init__.py  cli.py  enhanced_player.py  main.py  main_window.py  metadata_parser.py  modern_gui.py  musicbrainz_client.py  player.py  radio_browser.py  theme.qss
rag/: .gitignore  PERFORMANCE_OPTIMIZATION.md  README.md  config.json  data_loader.py  embedding_llm_setup.py  file_watcher.py  lazy_imports.py  main.py  mcp_rag_pipeline.py  prompts.json  (+3 more)
(+149 files in other folders)
